--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,3 +5,4 @@ builds:
       - linux
     goarch:
       - amd64
+    ldflags: "-s -w -X info.Version={{.Version}} -X info.CommitHash={{.Commit}} -X info.BuildDate={{.Date}}"
