--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,4 +5,4 @@ builds:
       - linux
     goarch:
       - amd64
-    ldflags: "-s -w -X info.Version={{.Version}} -X info.CommitHash={{.Commit}} -X info.BuildDate={{.Date}}"
+    ldflags: "-s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}"
