--- a/ooni-collector.toml
+++ b/ooni-collector.toml
@@ -1,19 +1,10 @@
 # This is an example config file for ooni-collector
 [core]
-log-level = "INFO"
+log-level = "DEBUG"
 is-dev = false
+report-dir = "/tmp/ooni-reports"
 
 [api]
 port = 8080
 address = "127.0.0.1"
-admin-password = "changeme"
 fqn = "unknown"
-
-[db]
-url = "mongodb://localhost:32769"
-
-[aws]
-access-key-id = ""
-secret-access-key = ""
-s3-bucket = "ooni-collector"
-s3-prefix = "reports"
